# Slipstream

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CubeMX Debug (1).cfg  CubeMX Debug.cfg  CubeMX Debug.launch  CubeMX.ioc  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  hardware_issue.yml
.github/workflows/: auto-branch.yml  dashboard-backbone.yml  desktop-packaging.yml  flutter-app.yml  hotpath-physics-iracing-smoke.yml  hotpath-physics.yml  kibot.yml  mcu.yml  pc-heartbeat.yml  server-cloud-ingest.yml
Core/Inc/: stm32c0xx_hal_conf.h
Core/Src/: main.c  stm32c0xx_hal_msp.c
Debug/: CubeMX.elf  CubeMX.list  CubeMX.map  makefile  objects.list
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32c0xx_hal_msp.cyclo  stm32c0xx_hal_msp.d  stm32c0xx_hal_msp.su  stm32c0xx_it.d  system_stm32c0xx.d
Electronics/: README.md
Electronics/Circuits/ffb-steering-wheel/: ffb-steering-wheel.kicad_prl  ffb-steering-wheel.kicad_pro  ffb-steering-wheel.kicad_sch
Electronics/kibot_resources/templates/: readme.txt
Electronics/kibot_yaml/: kibot_main.yaml
Electronics/mcu-platform/: mcu-platform.kicad_prl  mcu-platform.kicad_pro  mcu-platform.kicad_sch
Electronics/mcu-platform/capstone/: H-BRIDGE_1.kicad_sch  H_BRIDGE_2.kicad_sch  MCU_BOARD.kicad_sch-bak  capstone.kicad_prl  capstone.kicad_sch  ~capstone.kicad_pcb.lck
Firmware-code/: README.md
Software-code/: README.md
Software-code/App/: README.md  pubspec.yaml
Software-code/App/lib/: causality_engine.dart  composition_engine.dart  data_management.dart  event_detection.dart  main.dart  session_browser.dart  telemetry_analysis.dart
Software-code/Asseto-Corsa-telemetry/: readme.md  requirements.txt
Software-code/Asseto-Corsa-telemetry/cpp/: CMakeLists.txt
Software-code/Asseto-Corsa-telemetry/cpp/src/: ac_shmem.hpp  main.cpp  recorder.cpp  recorder.hpp
Software-code/Launch-Webpage/: .gitignore  README.md  index.html  package-lock.json  tailwind.config.ts
docs/: README.md  Usefull-links.md
docs/Calculators/: FFB_calculator.xlsx
docs/Diagrams/: High-Level-MCU-Architecture-V0.1.excalidraw  High-Level-MCU-Architecture-V0.2.excalidraw  High-Level-MCU-Architecture-V1.0.excalidraw  High-Level-System-Architecture-v0.1(Nov-2025).excalidraw  High-Level-System-Architecture-v0.2(Nov-2025).excalidraw  High-Level-System-Architecture-v0.3(Nov-2025).excalidraw  Highlevel_Motionplatform.excalidraw  Low-Level-System-Architecture-v0.1(Nov-2025).excalidraw  Low-Level-System-Architecture-v0.2(Nov-2025).excalidraw  Low-Level-System-Architecture-v0.3(Nov-2025).excalidraw  Low-Level-System-Architecture-v0.4.excalidraw  Sequence-Flow-Diagram-v0.1(Nov-2025).excalidraw  System-Criticality-Diagram-v0.1.excalidraw  system.excalidraw
docs/Latex/: System-Architecture.tex
docs/architecture/: game-adapter-plugin-interface.md
docs/release/: desktop-installers.md
firmware/: README.md
firmware/mcu/: README.md  platformio.ini
firmware/mcu/include/: led.h  (+21 more)
hotpath/services/dashboard/: CMakeLists.txt  README.md
hotpath/services/dashboard/include/: dashboard_state.h  firmware_manager.h  logger.h  session_store.h
hotpath/services/dashboard/src/: dashboard_server.cpp  dashboard_state.cpp  firmware_manager.cpp  logger.cpp  main.cpp  session_store.cpp
hotpath/services/dashboard/tests/: test_firmware_manager.cpp  test_session_store.cpp  test_state.cpp
hotpath/services/heartbeat/: CMakeLists.txt  README.md
hotpath/services/heartbeat/include/: crc16.h  frame_batcher.h  protocol.h  serial_port.h
hotpath/services/heartbeat/src/: crc16.cpp  main.cpp  protocol.cpp  serial_port_posix.cpp  serial_port_win.cpp
hotpath/services/heartbeat/tests/: test_batcher.cpp  test_protocol.cpp
hotpath/services/physics/: CMakeLists.txt  README.md
hotpath/services/physics/include/: assetto_corsa_adapter.h  cloud_grpc_sink.h  cloud_streamer.h  coordinate_normalizer.h  f1_udp_adapter.h  filters.h  game_adapter.h  game_adapter_plugin.h  game_adapter_registry.h  igame_telemetry_provider.h  iracing_adapter.h  jitter_filter.h  kinematics.h  motion_engine.h  motion_loop.h  profiling.h  telemetry_sample.h  transform.h  universal_game_adapter.h
hotpath/services/physics/plugins/iracing/include/: iracing_adapter_plugin.h
hotpath/services/physics/plugins/iracing/src/: iracing_adapter_plugin.cpp
hotpath/services/physics/src/: assetto_corsa_adapter_stub.cpp  assetto_corsa_adapter_win.cpp  cloud_grpc_sink.cpp  cloud_streamer.cpp  coordinate_normalizer.cpp  f1_udp_adapter.cpp  filters.cpp  game_adapter.cpp  game_adapter_plugin.cpp  game_adapter_registry.cpp  iracing_adapter_stub.cpp  kinematics.cpp  motion_engine.cpp  motion_loop.cpp  transform.cpp  universal_game_adapter.cpp
hotpath/services/physics/tests/: test_cloud_streamer.cpp  test_coordinate_normalizer.cpp  test_engine.cpp  test_f1_udp_adapter.cpp  test_filters.cpp  test_iracing_adapter_plugin.cpp  test_iracing_live_probe_smoke_win.cpp  test_iracing_plugin_loader_integration.cpp  test_jitter_filter.cpp  test_kinematics.cpp  test_plugin_loader.cpp  test_profiling.cpp  test_transform.cpp  test_universal_game_adapter.cpp
packaging/: README.md
packaging/macos/: README.md  launch_dashboard_service.sh  uninstall_slipstream.command
packaging/windows/: README.md  Slipstream.iss  install-autostart.ps1  install-driver.ps1  uninstall-autostart.ps1  uninstall-driver.ps1
scripts/: gen_proto_py.sh  kibot_ci.sh  run-act.sh
scripts/package/: build_macos_installer.sh  build_windows_installer.ps1  sign_windows_installer.ps1
server/: README_cloud_ingest.md  cloud_ingest_server.py
server/cloud_ingest/: __init__.py  batch_writer.py  downsampling.py  grpc_service.py  models.py  pipeline.py  storage.py  validation.py
server/tests/: __init__.py  _fakes.py  test_batch_writer.py  test_grpc_integration.py  test_pipeline.py  test_query_optimization.py  test_schema_and_grpc.py
server/timescaledb/: docker-compose.yml
tools/: view_parquet.py
(+111 files in other folders)
